# drf-pydantic-bridge

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.MD  pyproject.toml
lib/: decorators.py  logging_config.py
tests/: __init__.py  test_decorators.py
